# weight-recorder

./: .gitignore  stack.yaml  weight-recorder.cabal  weight.db
.stack-work/: stack.sqlite3
.stack-work/ghci/f61897e0/: cabal_macros.h
app/: Main.hs
data/: weight.db
src/: App.hs
src/Entity/: User.hs  WeightRecord.hs
src/Model/: User.hs  WeightRecord.hs
src/Web/: Core.hs  WeightRecorder.hs
src/Web/Action/: Login.hs  NewRecord.hs  Register.hs
src/Web/View/: Main.hs  Start.hs
templates/: main.mustache  start.mustache
test/: AppSpec.hs  Spec.hs  WeightRecorderSpec.hs
test/Model/: UserSpec.hs  WeightRecordSpec.hs
