name:                weight-recorder
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/weight-recorder#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2023 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
                     CHANGELOG.md
cabal-version:       >=1.10

executable weight-recorder
  hs-source-dirs:      app
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , bcrypt 
                     , bytestring
                     , filepath
                     , HDBC
                     , HDBC-sqlite3
                     , http-types
                     , mtl
                     , Spock >= 0.11
                     , persistable-record
                     , relational-query-HDBC
                     , relational-query
                     , resource-pool
                     , text
                     , time
                     , transformers
                     , wai
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints
                       -XImportQualifiedPost
