name:                weight-recorder
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/weight-recorder#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2023 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
                     CHANGELOG.md
cabal-version:       >=1.10

data-files:            templates/start.mustache
                     , templates/main.mustache
                     , data/schema.sql

library
  hs-source-dirs:      src
  default-language:    Haskell2010
  exposed-modules:     Entity.User
                     , Entity.WeightRecord
                     , Model.User
                     , Model.WeightRecord
                     , Web.Action.Register
                     , Web.Core
                     , Web.View.Start
                     , Web.WeightRecorder
  build-depends:       base >= 4.7 && < 5
                     , bcrypt 
                     , bytestring
                     , filepath
                     , HDBC
                     , HDBC-sqlite3
                     , http-types
                     , mtl
                     , mustache
                     , Spock >= 0.11
                     , persistable-record
                     , relational-query-HDBC
                     , relational-query
                     , resource-pool
                     , product-isomorphic
                     , text
                     , time
                     , transformers
                     , wai
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints
                       -XImportQualifiedPost

executable weight-recorder
  hs-source-dirs:      app
  main-is:             Main.hs
  other-modules:       Paths_weight_recorder
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , filepath
                     , weight-recorder
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints
                       -XImportQualifiedPost

test-suite weight-recorder-test
  type:               exitcode-stdio-1.0
  hs-source-dirs:     test
  main-is:            Spec.hs
  other-modules:      WeightRecorderSpec
                      , Model.UserSpec
                      , Model.WeightRecordSpec
                      , Paths_weight_recorder
  build-depends:      base >=4.7 && <5
                    , filepath
                    , hspec
                    , hspec-wai
                    , HDBC
                    , HDBC-sqlite3
                    , process
                    , Spock >=0.14
                    , temporary
                    , time
                    , utf8-string
                    , wai-extra
                    , weight-recorder
  ghc-options:        -Wall
                      -Wcompat
                      -Widentities
                      -Wincomplete-record-updates
                      -Wincomplete-uni-patterns
                      -Wmissing-export-lists
                      -Wmissing-home-modules
                      -Wpartial-fields
                      -Wredundant-constraints
                      -O2
                      -threaded
                      -rtsopts
                      -with-rtsopts=-N
                      -XImportQualifiedPost
  default-language:   Haskell2010
